[package]
name = "oar-p2p"
version = "0.2.24"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
# Optimize for size
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Compile crates one after another for better optimizations
strip = true             # Strip symbols from binary
debug = false            # Disable debug info

# Additional size optimizations
[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
